--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,4 +1,3 @@
-# Generated via `prisma init`
 version: '3'
 services:
   prisma:
@@ -13,23 +12,20 @@ services:
         # managementApiSecret: my-secret
         databases:
           default:
-            connector: mysql
-            host: mysql
-            user: root
-            password: prisma
-            # Changed rawAccess to false to address problem with admin
-            rawAccess: false
-            port: 3306
-            migrations: true
-  mysql:
-    image: mysql:5.7
+            connector: mongo
+            uri: 'mongodb://prisma:prisma@mongo'
+  mongo:
+    image: mongo:3.6
     restart: always
-    # Uncomment the next two lines to connect to your your database from outside the Docker environment, e.g. using a database GUI like Workbench
+    # Uncomment the next two lines to connect to your your database from outside the Docker environment, e.g. using a database GUI like Compass
     # ports:
-    # - "3306:3306"
+    # - "27017:27017"
     environment:
-      MYSQL_ROOT_PASSWORD: prisma
+      MONGO_INITDB_ROOT_USERNAME: prisma
+      MONGO_INITDB_ROOT_PASSWORD: prisma
+    ports:
+      - '27017:27017'
     volumes:
-      - mysql:/var/lib/mysql
+      - mongo:/var/lib/mongo
 volumes:
-  mysql:
+  mongo:
