--- a/backend/prisma-docker/mysql/docker-compose.yml
+++ b/backend/prisma-docker/mysql/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3'
 services:
   prisma:
-    image: prismagraphql/prisma:1.32-beta
+    image: prismagraphql/prisma:1.34.10
     restart: always
     ports:
-    - "4466:4466"
+      - '4466:4466'
     environment:
       PRISMA_CONFIG: |
         port: 4466
         # uncomment the next line and provide the env var PRISMA_MANAGEMENT_API_SECRET=my-secret to activate cluster security
         # managementApiSecret: my-secret
         databases:
-          default:
+          sick-fits:
             connector: mysql
             host: mysql
             user: root
@@ -23,11 +23,11 @@ services:
     image: mysql:5.7
     restart: always
     # Uncomment the next two lines to connect to your your database from outside the Docker environment, e.g. using a database GUI like Workbench
-    # ports:
-    # - "3306:3306"
+    ports:
+      - '3306:3306'
     environment:
       MYSQL_ROOT_PASSWORD: prisma
     volumes:
       - mysql:/var/lib/mysql
 volumes:
-  mysql:
+  ? mysql
