Add 'user' field to the prisma schema
- Added user field to the Item type to allow for relationship
- Modified prisma.yml file to allow for proper generation of the
prisma.graphql file

--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -4,8 +4,8 @@ datamodel: datamodel.graphql
 
 generate:
   - generator: graphql-schema
-    output: ./src/generated/prisma.graphql
-# Since prisma 1.31 the client is generated automaticaly after `prisma deploy` so remove this...
-# hooks:
-#   post-deploy:
-#     - prisma generate
+    output: ./src/generated/
+
+hooks:
+  post-deploy:
+    - prisma generate
